# DigitalWallet

./: CMakeLists.txt  README.md
demos/: CMakeLists.txt  demo_vars.h
demos/DigitalWalletDemos/: 123.qrc  CMakeCache.txt  CMakeLists.txt  dangki1.cpp  dangki1.h  dangki1.ui  dangnhap1.cpp  dangnhap1.h  dangnhap1.ui  demo1.cpp  demo1.pro  doimk.cpp  doimk.h  doimk.ui  doimkbangotp.cpp  doimkbangotp.h  doimkbangotp.ui  giaodich.cpp  giaodich.h  giaodich.ui  hello.cpp  hello.h  hello.ui  hello1.cpp  hello1.h  hello1.ui  help1.cpp  help1.h  help1.ui  historydialog.cpp  historydialog.h  historydialog.ui  main.cpp  menu.cpp  menu.h  menu.ui  mkhauho.cpp  mkhauho.h  mkhauho.ui  nenchu.qrc  (+26 more)
demos/DigitalWalletDemos/picture/: anh.avif
src/: CMakeLists.txt  mimeattachment.cpp  mimeattachment.h  mimemessage.cpp  mimepart.cpp  smtpmime_global.h
